# Agentic-Autonomous-Data-Analyst-Platform

./: .gitignore  ARCHITECTURE.md  Dockerfile  PROJECT_PROGRESS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
api/: __init__.py  main.py
core/: __init__.py  config.py  exceptions.py  llm_client.py  mcp_manager.py  models.py  orchestrator.py  prompts.py  reflection.py
core/tools/: __init__.py  analysis.py  registry.py  reporting.py  visualization.py
data/: sample.csv
data/outputs/: _agent_test.txt
ingestion/: __init__.py  processor.py
mcp_servers/: database_server.py  filesystem_server.py
memory/: __init__.py  context_manager.py  session_store.py
observability/: __init__.py  logger.py  metrics.py  tracing.py
outputs/: .sessions.db  eda_report_20260405_181128.md  eda_report_20260606_132657.md
security/: __init__.py  path_validator.py  sandbox.py
tests/: e2e_output.txt
tests/unit/: __init__.py  test_config.py  test_context_manager.py  test_metrics.py  test_models.py  test_path_validator.py  test_sandbox.py
ui/: __init__.py  streamlit_app.py
