[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analyst-platform"
version = "2.0.0"
description = "Enterprise-grade autonomous data analysis platform powered by MCP and Groq LLM."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "mcp>=1.0.0",
    "groq>=0.5.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1.0"]
pdf = ["pdfplumber>=0.11.0"]
parquet = ["pyarrow>=14.0.0"]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0.0"]
tracing = ["opentelemetry-api>=1.22.0", "opentelemetry-sdk>=1.22.0"]
all = [
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
    "pyarrow>=14.0.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests with no external dependencies",
    "integration: Tests that require MCP servers or database",
    "security: Security-focused test suite",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101"]  # Allow assert in tests

[tool.setuptools.packages.find]
include = ["core*", "security*", "mcp_servers*", "observability*", "memory*", "ingestion*", "api*", "ui*"]
